# cdhit-parser

./: DEV.md  LICENSE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-funct.py  version.py
.github/workflows/: python-old.yaml  python-package.yml
cdhit_reader/: __init__.py  _cli.py  _compare.py  _fasta.py  _reader.py  _testit.py  _version.py
cdhit_reader/test/: aa.clstr  conftest.py  nt.clstr  small_nt.clstr  test_clstr.py  testclstr.py
data/: aa  aa.clstr  compressed.faa  input.fa  input.faa  input1.faa  input2.faa  merge-clust  merge-clust.clstr  merge.faa  nt  nt.clstr  v020.faa
docs/: README.md
test/: cl.py  fa.py
