[metadata]
author = Andrea Telatin
author_email = andrea.telatin@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = CD-HIT cluster parser
download_url = https://github.com/telatin/cdhit-parser
keywords = cd-hit, clustering, reader
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Andrea Telatin
platforms = Windows, MacOS, Linux
maintainer_email = andrea.telatin@gmail.com
name = cdhit-reader
url = https://github.com/telatin/cdhit-parser
version = attr: version.get
python_requires = >3.6

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    click>=7.1.2
    importlib-resources>=1.4.0
    more-itertools>=8.4.0
    pytest>=5.4.3
    xopen>=1.0.1

[options.extras_require]
cli = plotille

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --doctest-glob="*.md"
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir

[pylint]
disable = redefined-builtin,R0915

[flake8]
ignore = E501 E741 E203 W503 W0212 W0622 R0915
